--- a/room.html
+++ b/room.html
@@ -11,7 +11,10 @@
   <body>
    <script src="js/three.js"> </script>
    <script src="js/OrbitControls.js"> </script>
-
+    <script src="js/LoadingManager.js"></script>
+    <script src="js/OBJLoader.js"></script>
+    <script src="js/OBJMTLLoader.js"></script>
+    <script src="js/MTLLoader.js"></script>
     <script src="Scripts.js"></script>
   </body>
 </html>
