--- a/House/index.html
+++ b/House/index.html
@@ -33,7 +33,7 @@
 		varying vec2 vUv;
 		// Shader code modified from http://www.clicktorelease.com/blog/vertex-displacement-noise-3d-webgl-glsl-three-js
 		void main() {
-			gl_FragColor = vec4( vec3( vUv, 0.5 ), 1.0);
+			gl_FragColor = vec4( vec3( vUv, .2 ), .4);
 		}
 	
 	</script>
