--- a/Our Project/basic_lighting_complete.html
+++ b/Our Project/basic_lighting_complete.html
@@ -184,7 +184,31 @@
   };
 
   //link the resize of the window to the update of the camera
-  window.addEventListener( 'resize', MyResize);
+  window.addEventListener( 'resize', MyResize);var loader = new OBJLoader();
+
+// load a resource
+loader.load(
+	// resource URL
+	'models/house1.obj',
+	// called when resource is loaded
+	function ( object ) {
+
+		scene.add( object );
+
+	},
+	// called when loading is in progresses
+	function ( xhr ) {
+
+		console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
+
+	},
+	// called when loading has errors
+	function ( error ) {
+
+		console.log( 'An error happened' );
+
+	}
+);
     </script>
   </body>
 </html>
