--- a/Our Project/Index.html
+++ b/Our Project/Index.html
@@ -5,8 +5,16 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <script src="libraries/three.min.js"></script>
-    <script src="libraries/OrbitControls.js"></script>
+    <script src="libraries\three.js"></script>
+	<script src="libraries\three.min.js"></script>
+	<script src="libraries\OBJLoader.js"></script>
+	<script src="libraries\LoadingManager.js"></script>
+	<script src="libraries\OBJMTLLoader.js"></script>
+	<script src="libraries\MTLLoader.js"></script>
+	<script src="libraries\dat.gui.js"></script>
+	<script src="libraries\dat.gui.min.js"></script>
+	<script src="libraries\OrbitControls.js"></script>
+	<script src="libraries\FirstPersonControls.js"></script>
     <script>
       let scene, camera, renderer;
       function init() {
