fixed texture sizes

--- a/room.html
+++ b/room.html
@@ -37,25 +37,27 @@
       'img/floor1.jpg',
       'img/wood4.jpg',
       'img/wood5.jpg',
-      'img/concretewall.jpg',
-      'img/brickwall1.jpg',
-      'img/brickwall2.jpg',
-      'img/carpet.jpg'
+      'img/wood6.jpg',
+      'img/wood7.png',
+      'img/greybrick.jpg',
+      'img/brick1.jpg',
+      'img/brick2.jpg'
     ];
     var textureToShowFloor = 0;
 
     //The wall textures to use
     var arr2 = [
       'img/wall1.jpg',
-      'img/woodwall1.jpg',
       'img/floor1.jpg',
       'img/wood1.jpg',
       'img/wood2.jpg',
       'img/wood3.jpg',
       'img/wood4.jpg',
-      'img/concretewall.jpg',
-      'img/brickwall1.jpg',
-      'img/brickwall2.jpg',
+      'img/wood5.png',
+      'img/wood7.png',
+      'img/greybrick.jpg',
+      'img/brick1.jpg',
+      'img/brick2.jpg',
       'img/redbg.png'
     ];
     var textureToShowWall = 0;
