claudia test files

--- a/Our Project/Index.html
+++ b/Our Project/Index.html
@@ -13,8 +13,10 @@
 	<script src="libraries\MTLLoader.js"></script>
 	<script src="libraries\dat.gui.js"></script>
 	<script src="libraries\dat.gui.min.js"></script>
-	<script src="libraries\OrbitControls.js"></script>
-  <script src="libraries\FirstPersonControls.js"></script>
+  <script src="libraries\OrbitControls.js"></script>
+  <script src="libraries\TransformControls.js"></script>
+  <script src="libraries\PerspectiveCamera.js"></script>
+  <script src="libraries\OrthographicCamera.js"></script>
   <script src="Scripts.js"></script>
 
   </body>
