--- a/Our Project/claudiaindex.html
+++ b/Our Project/claudiaindex.html
@@ -23,7 +23,7 @@
 	<script src="libraries\dat.gui.min.js"></script>
   <script src="libraries\OrbitControls.js"></script>
   <script src="libraries\TransformControls.js"></script>
-  <script src="Scripts.js"></script>
+  <script src="new.js"></script>
 
   </body>
 </html>
