--- a/Our Project/Index.html
+++ b/Our Project/Index.html
@@ -22,7 +22,7 @@
 	<script src="libraries\dat.gui.js"></script>
 	<script src="libraries\dat.gui.min.js"></script>
   <script src="libraries\OrbitControls.js"></script>
-  <script src="libraries\TransformControls.js"></script>
+  <script src="libraries\DragControls.js"></script>
   <script src="Scripts.js"></script>
 
   </body>
