--- a/Our Project/claudiaindex.html
+++ b/Our Project/claudiaindex.html
@@ -22,8 +22,8 @@
 	<script src="libraries\dat.gui.js"></script>
 	<script src="libraries\dat.gui.min.js"></script>
   <script src="libraries\OrbitControls.js"></script>
-  <script src="libraries\TransformControls.js"></script>
-  <script src="new.js"></script>
+  <script src="libraries\DragControls.js"></script>
+  <script src="dragtest.js"></script>
 
   </body>
 </html>
