--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -13,17 +13,25 @@
     }
   </style>
   <body>
+
+   
+
+		<div id="info">
+			"W" Drag | "Q" Orbit| "1" Floor Material | "2" Wall Material<br />
+			
+        </div>
+        
     <script src="libraries\three.js"></script>
     <script src="libraries\three.min.js"></script>
     <script type = "module" src= "libraries\three.module.js"></script>
-	<script src="libraries\OBJLoader.js"></script>
+	<script type = "module" src="libraries\OBJLoader.js"></script>
 	<script src="libraries\LoadingManager.js"></script>
-	<script src="libraries\OBJMTLLoader.js"></script>
-	<script src="libraries\MTLLoader.js"></script>
+	<script type = "module" src="libraries\MTLLoader.js"></script>
 	<script src="libraries\dat.gui.js"></script>
 	<script src="libraries\dat.gui.min.js"></script>
-    <script  src="libraries\OrbitControls.js"></script>
+    <script type = "module" src="libraries\OrbitControls.js"></script>
     <script type = "module" src="libraries\DragControls.js"></script>
+    <script type = "module" src= "libraries\TransformControls.js"></script>
  
     <script type = "module" src="newjs.js"></script>
 
