--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -17,7 +17,7 @@
    
 
 		<div id="info">
-			"W" Drag | "Q" Orbit| "1" Floor Material | "2" Wall Material<br />
+			"Q" Drag | "W" Orbit| "E" Transform | "1" Floor Material | "2" Wall Material<br />
 			
         </div>
         
@@ -33,7 +33,7 @@
     <script type = "module" src="libraries\DragControls.js"></script>
     <script type = "module" src= "libraries\TransformControls.js"></script>
  
-    <script type = "module" src="newjs.js"></script>
+    <script type = "module" src="transformtest.js"></script>
 
   </body>
 </html>
