transformtest.js final controls
orbit, drag and rotational transform controls working with test geometry. need to work into scene structure of other group members'.

--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -17,7 +17,7 @@
    
 
 		<div id="info">
-			"Q" Drag | "W" Orbit| "E" Transform | "1" Floor Material | "2" Wall Material<br />
+			Press "Q" to enable orbit camera. Use mouse to rotate and zoom. | "Click" to stop orbit and move and rotate objects | "1" Floor Material | "2" Wall Material<br />
 			
         </div>
         
@@ -30,7 +30,6 @@
 	<script src="libraries\dat.gui.js"></script>
 	<script src="libraries\dat.gui.min.js"></script>
     <script type = "module" src="libraries\OrbitControls.js"></script>
-    <script type = "module" src="libraries\DragControls.js"></script>
     <script type = "module" src= "libraries\TransformControls.js"></script>
  
     <script type = "module" src="transformtest.js"></script>
