--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -17,7 +17,7 @@
    
 
 		<div id="info">
-			Press "Q" to enable orbit camera. Use mouse to rotate and zoom. | "Click" to stop orbit and move and rotate objects | "1" Floor Material | "2" Wall Material<br />
+			Press "Q" to enable orbit camera. Use mouse to rotate and zoom. | "W" or "Click" on object to stop orbit and move and rotate objects | "1" Floor Material | "2" Wall Material<br />
 			
         </div>
         
