--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -24,9 +24,14 @@
   <script src="libraries\three.js"></script>
   <script src="libraries\three.min.js"></script>
   <script type = "module" src= "libraries\three.module.js"></script>
-  <script type = "module" src="libraries\OBJLoader.js"></script>
+
   <script src="libraries\LoadingManager.js"></script>
-  <script type = "module" src="libraries\MTLLoader.js"></script>
+
+  
+
+  <script type="text/javascript" src="libraries/MTLLoader.js" ></script>
+  <script type="text/javascript" src="libraries/OBJLoader.js" ></script>
+    
   <script src="libraries\dat.gui.js"></script>
   <script src="libraries\dat.gui.min.js"></script>
   <script type = "module" src="libraries\OrbitControls.js"></script>
