Added light, furnitures, fixed background

--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -29,8 +29,8 @@
 
   
 
-  <script type="text/javascript" src="libraries/MTLLoader.js" ></script>
-  <script type="text/javascript" src="libraries/OBJLoader.js" ></script>
+  <script type="module" src="libraries/MTLLoader.js" ></script>
+  <script type="module" src="libraries/OBJLoader.js" ></script>
     
   <script src="libraries\dat.gui.js"></script>
   <script src="libraries\dat.gui.min.js"></script>
