Revert "Merge branch 'Christian' into Danny"
This reverts commit b62179779b68c549e6577f09f56f18bd588d01e2, reversing
changes made to 4b7b7b85231f22e496826cb14819c4ec3cb802b0.

--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -21,24 +21,18 @@
 			
         </div>
         
-  <script src="libraries\three.js"></script>
-  <script src="libraries\three.min.js"></script>
-  <script type = "module" src= "libraries\three.module.js"></script>
-
-  <script src="libraries\LoadingManager.js"></script>
-
-  
-
-  <script type="module" src="libraries/MTLLoader.js" ></script>
-  <script type="module" src="libraries/OBJLoader.js" ></script>
-    
-  <script src="libraries\dat.gui.js"></script>
-  <script src="libraries\dat.gui.min.js"></script>
-  <script type = "module" src="libraries\OrbitControls.js"></script>
-  <script type = "module" src= "libraries\TransformControls.js"></script>
-
-  <script type = "module" src="transformtest.js"></script>
-
+    <script src="libraries\three.js"></script>
+    <script src="libraries\three.min.js"></script>
+    <script type = "module" src= "libraries\three.module.js"></script>
+	<script type = "module" src="libraries\OBJLoader.js"></script>
+	<script src="libraries\LoadingManager.js"></script>
+	<script type = "module" src="libraries\MTLLoader.js"></script>
+	<script src="libraries\dat.gui.js"></script>
+	<script src="libraries\dat.gui.min.js"></script>
+    <script type = "module" src="libraries\OrbitControls.js"></script>
+    <script type = "module" src= "libraries\TransformControls.js"></script>
+ 
+    <script type = "module" src="transformtest.js"></script>
 
   </body>
 </html>
