Added time change

--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -17,9 +17,11 @@
    
 
 		<div id="info">
-			Press "Q" to enable orbit camera. Use mouse to rotate and zoom. | "W" or "Click" on object to stop orbit and move and rotate objects | "1" Floor Material | "2" Wall Material<br />
+			Press "Q" to enable orbit camera. Use mouse to rotate and zoom. | "W" or "Click" on object to stop orbit and move and rotate objects | "1" Floor Material | "2" Wall Material | "c" clone furnitures | "space" change enviroment<br />
 			
         </div>
+
+
         
   <script src="libraries\three.js"></script>
   <script src="libraries\three.min.js"></script>
