--- a/Our Project/newindex.html
+++ b/Our Project/newindex.html
@@ -14,6 +14,12 @@
   </style>
   <body>
 
+   
+
+		<div id="info">
+		"Click" to orbit camera and drag objects | "R" to activate rotation <br />
+			
+        </div>
         
   <script src="libraries\three.js"></script>
   <script src="libraries\three.min.js"></script>
